--- a/milk.html
+++ b/milk.html
@@ -11,7 +11,7 @@
     <div class="am" ><a href="index.html" id="glavnaya" align="center"><b id="vernutsya">Вернуться<br>на<br>главную</b></a></div>
     <div class="classicLogo" align="center" id="classicCof" style="margin:3% 0;font-size: 4vw;">Альтернативное молоко</div>
 
-  <div class="Moloko">    <div class="SiropCard"><div class="imgCoffee2" style="background-image: url(images/soya.png); height:110%"></div><div class="description2" align="center"><div class="coffeeName2" >Соевое</div></div></div>
+  <div class="Moloko">    <div class="SiropCard"><div class="imgCoffee2" style="background-image: url(images/soya.png);"></div><div class="description2" align="center"><div class="coffeeName2" >Соевое</div></div></div>
     <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/coconut.png)"></div><div class="description2" align="center"><div class="coffeeName2">Кокосовое</div></div></div>
     <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/almond.png)"></div><div class="description2" align="center"><div class="coffeeName2">Миндальное</div></div></div>
     <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/hazelnut.png)"></div><div class="description2" align="center"><div class="coffeeName2">Фундучное</div></div></div>
