--- a/milk.html
+++ b/milk.html
@@ -9,7 +9,7 @@
 <body style="background-image: url(images/f24046c97b1caa3460c5bb74aa6e2889.jpg);">
     
     <div class="am" ><a href="index.html" id="glavnaya" align="center"><b id="vernutsya">Вернуться<br>на<br>главную</b></a></div>
-    <div class="classicLogo" align="center" id="classicCof" style="margin:3% 0;font-size: 4vw;">Альтернативное молоко</div>
+    <div class="classicLogo" align="center" id="classicCof" style="margin:3% auto; width: auto;background-color:  white;box-shadow: 0 6px 4px -4px rgba(0, 0, 0, 0.5);font-size: 4vw;">Альтернативное молоко</div>
 
   <div class="Moloko">    <div class="SiropCard"><div class="imgCoffee2" style="background-image: url(images/soya.png);"></div><div class="description2" align="center"><div class="coffeeName2" >Соевое</div></div></div>
     <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/coconut.png)"></div><div class="description2" align="center"><div class="coffeeName2">Кокосовое</div></div></div>
