--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <div class="btn-up btn-up_hide"></div>
     <div class="a">
-        <div id="aslogan">Осторожно,<br>вызываем зависимость </div>
+        <div id="aslogan">Осторожно,<br>вызываем привыкание </div>
         <div id="shapka">
             <a href="index.html#c" class="button" class="shapkaButton">Напитки разные</a>
             <a href="milk.html" target="_blank" class="button" class="shapkaButton">Молоко</a>
@@ -25,14 +25,13 @@
     </div>
 <div id="b">
     <div id="bimg"><img src="images/bestcoffee.jpg"></div>
-    <div id="bslogan">Тут типа чето душевно про кофe
-        <br>................
-        <br>................
-        <br>................
-        <br>................
-        <br>................
-        <br>..............!!!
+    <div id="bslogan">Ждем тебя в гости
+      <br>по адресу:
+      <br>ул. Ленина, 54,
+      <br>рабочий посёлок Октябрьский
+      <br>ТЦ Замок, этаж 1
         <br>
+        <br>+7 (916) 383-37-33
         <a href="https://www.instagram.com/nr_coffeehouse/" target="_blank"  id="insta"><img src="images/insta.png" style="transition: 0.5s;"></a>
     </div>
 </div>
