--- a/index.html
+++ b/index.html
@@ -67,8 +67,6 @@
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/b9868966d39ff1b79559ea13a5c55116.jpg)"></div><div class="description" align="center"><div class="coffeeName">Латте</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>380 мл - 180 руб.<br>480 мл - 230 руб.</div><div class="titata">Для любителей легкого кофе. Поможет расслабиться и насладиться жизнью</div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/c0b126272225320177a0c1a58a8682b5926dbe54.jpg)"></div><div class="description" align="center"><div class="coffeeName">Латте Макиато</div><div class="coffeeDescription"><div>380 мл - 270р</div><div class="titata">Отличается мягким, нежным вкусом благодаря огромной доле молока в напитке. Скорее молочный, чем кофейный</div></div></div></div>
 
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/w09zkvl5qqu1z0xe7baccmft9k3kezz1.jpeg)"></div><div class="description" align="center"><div class="coffeeName">Гляссе</div><div class="coffeeDescription"><div>380 мл - 320р</div><div class="titata">Кофе с мороженым</div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/affogato.jpg)"></div><div class="description" align="center"><div class="coffeeName">Аффогато</div><div class="coffeeDescription"><div>220р</div><div class="titata">Мороженое с кофе</div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/ebe121e3-332f-41a8-af96-0ebfc10fb8c6.jpg)"></div><div class="description" align="center"><div class="coffeeName">Моккачино</div><div class="coffeeDescription"><div>380 мл - 290 руб.</div><div class="titata">Кофейно-шоколадная бомба, не оставит равнодушными кофеманов и сладкоежек</div></div></div></div>
 
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/c63e5e140b6f5747c6a893a650ef0949.jpeg)"></div><div class="description" align="center"><div class="coffeeName">РАФ</div><div class="coffeeDescription"><div>380 мл - 290р</div><div style="margin-top:4%; background-color:rgba(94, 21, 33, 0.516); color:white; ;border:dashed 5px white;bottom: 0px; "><a href="RAF.html" >НАЖМИТЕ ЧТОБЫ<br>ПОСМОТРЕТЬ<br>ВСЕ РАФЫ,,,</a></div></div></div></div>
@@ -80,12 +78,14 @@
 
 <div class="classicLogo" align="center" id="season">Сезонные</div>
 <div class="classic2">
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/1679375610_bogatyr-club-p-laim-na-chernom-fone-instagram-81.jpg)"></div><div class="description" align="center"><div class="coffeeName">Мохито</div><div class="coffeeDescription" ><div>480 мл - 290р</div><div class="titata">Освежающий коктейль на основе тоника, мяты, лайма и льда</div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/IMG_1803-scaled.jpg)"></div><div class="description" align="center"><div class="coffeeName">Клубничный мохито</div><div class="coffeeDescription"><div>480 мл - 290р</div><div class="titata">Мохито + клубника</div></div></div></div>
+  <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/w09zkvl5qqu1z0xe7baccmft9k3kezz1.jpeg)"></div><div class="description" align="center"><div class="coffeeName">Гляссе</div><div class="coffeeDescription"><div>380 мл - 320р</div><div class="titata"></div></div></div></div>
+
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/1679375610_bogatyr-club-p-laim-na-chernom-fone-instagram-81.jpg)"></div><div class="description" align="center"><div class="coffeeName">Мохито</div><div class="coffeeDescription" ><div>480 мл - 290р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/IMG_1803-scaled.jpg)"></div><div class="description" align="center"><div class="coffeeName">Клубничный мохито</div><div class="coffeeDescription"><div>480 мл - 290р</div><div class="titata"></div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/240143f8bd82498ad9e63905ee58d57e.jpg)"></div><div class="description" align="center"><div class="coffeeName">Кофейный лимонад</div><div class="coffeeDescription">480 мл - 360р</div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/shmel.jpg)"></div><div class="description" align="center"><div class="coffeeName">Шмель</div><div class="coffeeDescription"><div>480 мл - 320 руб.</div><div class="titata">Кофейный напиток на основе двойного эспрессо и апельсинового сока</div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/shop_property_file_75751_1978.jpg)"></div><div class="description" align="center"><div class="coffeeName">Эспрессо тоник</div><div class="coffeeDescription"><div>480 мл - 290р</div><div class="titata">Прохладный освежающий напиток с терпким привкусом</div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/2671678.jpg)"></div><div class="description" align="center"><div class="coffeeName">Сицилия</div><div class="coffeeDescription"><div>480 мл - 320 руб.</div><div class="titata">Пряный цитрусовый кофе на основе эспрессо и тоника</div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/shmel.jpg)"></div><div class="description" align="center"><div class="coffeeName">Шмель</div><div class="coffeeDescription"><div>480 мл - 320 руб.</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/shop_property_file_75751_1978.jpg)"></div><div class="description" align="center"><div class="coffeeName">Эспрессо тоник</div><div class="coffeeDescription"><div>480 мл - 290р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/2671678.jpg)"></div><div class="description" align="center"><div class="coffeeName">Сицилия</div><div class="coffeeDescription"><div>480 мл - 320 руб.</div><div class="titata"></div></div></div></div>
       </div>
 
 
@@ -144,13 +144,6 @@
 
  
 </div>
-    <!-- <div id="sliders">
-    <div class="slider">
-        <img src="cat1.jpg" alt="Изображение 1" class="slide">
-        <img src="cat2.jpg" alt="Изображение 2" class="slide">
-        <img src="cat3.jpg" alt="Изображение 3" class="slide">
-      </div>
-    </div> -->
 
 
 
