--- a/milk.html
+++ b/milk.html
@@ -6,7 +6,7 @@
     <title>Молоко</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-image: url(images/f24046c97b1caa3460c5bb74aa6e2889.jpg);">
+<body style="background-image: url(images/f24046c97b1caa3460c5bb74aa6e2889.jpg);height:60%">
     
     <div class="am" ><a href="index.html" id="glavnaya" align="center"><b id="vernutsya">Вернуться<br>на<br>главную</b></a></div>
     <div class="classicLogo" align="center" id="classicCof" style="margin:3% auto; width: auto;background-color:  white;box-shadow: 0 6px 4px -4px rgba(0, 0, 0, 0.5);font-size: 4vw;">АЛЬТЕРНАТИВНОЕ<br>МОЛОКО</div>
